test(inventory): add feature test
